# UQSTEPS_modelica

./: .gitignore  .gitmodules  RCBCCycle.mo  RCBCycle.mo  RECUPBCycle.mo  SimpleCycle.mo  TestPCHX.mo  package.mo  package.order  readme.md
Components/: BaseExchanger.mo  EndPoint.mo  FanCooler.mo  HXCellState.mo  KimCorrelations.mo  MaterialConductivity.mo  Merger.mo  MockPCHeatExchanger.mo  MockPCHeatExchangerV2.mo  OilHeater.mo  PCHeatExchanger.mo  PCHeatExchangerV2.mo  PCMHeater.mo  Pump.mo  Recuperator.mo  Regulator.mo  SimplePCHeatExchanger.mo  Sink.mo  Source.mo  Splitter.mo  Turbine.mo  TwoPorts.mo  Valve.mo  WaterCooler.mo  package.mo  package.order
Components/bak/: MockPCHeatExchanger.mo
Interfaces/: PBFluidPort_a.mo  PBFluidPort_b.mo  package.mo  package.order
Media/: SCO2.mo
Resources/Data/: kim_2012.txt
Resources/Include/: cpversion.h
Steps/: TestPCHX.mo  package.mo
Steps/Components/: BaseExchanger.mo  ExchangerContainer.mo  FanCooler.mo  HXCellState.mo  HXState.bak-mo  KimCorrelations.mo  Merger.mo  Pump.mo  (+9 more)
Utilities/: CoolProp.mo  Util.mo
scripts/: main.py  model.py  pbmodel.py  physics.py  plot_lib.py  plotlib.py  testPCHEMeshram.py  test_matplotlib.py  tests.py  utils.py
src/: CMakeLists.txt.txt  MyProps.h.gch  MyPropsLib.cpp  MyPropsLib.h  PCHE.cpp  PCHE.h  TestPCHE.cpp  Utils.cpp  Utils.h  buildCoolProp.bat  buildMyProps.bat  buildPCHE.bat  buildPCHE.sh  buildTestPCHE.bat  cmds.md  example_dll.h  main.cpp  myProps.cpp  myProps.h
src/scripts/: CMakeLists.txt  buildCoolProp.bat  buildCoolProp.sh  buildMyProps.bat  buildTestPCHE.bat
(+309 files in other folders)
